# openai-api-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: chatloop.rs  story.rs
src/: lib.rs
