[package]
name = "openai-api"
version = "0.1.0"
authors = ["Josh Kuhn <deontologician@gmail.com>"]
license-file = "LICENSE"
edition = "2018"
description = "OpenAI API library for rust"
homepage = "https://github.com/deontologician/openai-api-rust/"
repository = "https://github.com/deontologician/openai-api-rust/"
keywords = ["openai", "gpt3"]
categories = ["api-bindings", "asynchronous"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.9", features = ["json"] }
thiserror = "^1.0.22"
serde = { version = "^1.0.117", features = ["derive"] }
tokio = { version = "^0.2.5", features = ["full"]}
serde_json = "^1.0"
derive_builder = "0.9.0"

[dev-dependencies]
mockito = "0.28.0"
maplit = "1.0.2"
