[package]
name = "openai-api"
version = "0.1.0"
authors = ["Josh Kuhn <deontologician@gmail.com>"]
license-file = "LICENSE"
edition = "2018"
description = "OpenAI API library for rust"
homepage = "https://github.com/deontologician/openai-api-rust/"
repository = "https://github.com/deontologician/openai-api-rust/"
keywords = ["openai", "gpt3"]
categories = ["api-bindings", "asynchronous"]

[features]
default = ["hyper"]

hyper = ["surf/hyper-client"]
curl = ["surf/curl-client"]
h1 = ["surf/h1-client"]

[dependencies]
surf = { version = "^2.1.0", default-features = false }
thiserror = "^1.0.22"
serde = { version = "^1.0.117", features = ["derive"] }
derive_builder = "^0.9.0"
log = "^0.4.11"

[dev-dependencies]
mockito = "0.28.0"
maplit = "1.0.2"
tokio = { version = "^0.2.5", features = ["full"]}
serde_json = "^1.0"
env_logger = "0.8.2"
